updating color to fix contrast issue
using correct color

--- a/src/components/Search/Pill.less
+++ b/src/components/Search/Pill.less
@@ -23,7 +23,7 @@
     border-left: 1px solid @gray-20;
     margin: 0;
     background-color: transparent;
-    color: @teal-80;
+    color: @dark-teal;
     position: absolute;
     right: 10px;
     top: 50%;
